--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="box">
             <img src="images/img-2.jpg" alt="">
-            <h3> Microsoft 365 Certified</h3>
+            <h3>Cisco Fundamentals </h3>
         </div>
 
         <div class="box">
