--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
         <div class="box">
             <img src="images/img-9.jpg" alt="">
-            <h3>Windows 10 Administrator</h3>
+            <h3>Excel Course</h3>
         </div>
         <div class="box">
             <img src="images/img-3.png" alt="">
